--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reach us</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -19,8 +20,8 @@
                 <div class="underline"></div>
             </div>
             <div class="input-container">
-                <input class="input" required name="text" type="email">
                 <label class="label" for="input">Email</label>
+                <input class="input" required name="text" type="email">
                 <div class="topline"></div>
                 <div class="underline"></div>
             </div>
@@ -32,36 +33,44 @@
             </div>
             <div class="input-container">
                 <input class="input" required name="text" type="text">
-                <label class="label" for="input">Institute of Study</label>
-                <div class="topline"></div>
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <input class="input" required name="text" type="text">
-                <label class="label" for="input">Branch</label>
-                <div class="topline"></div>
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <input class="input" required name="text" type="text">
-                <label class="label" for="input">City</label>
-                <div class="topline"></div>
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <input class="input" required name="text" type="text">
-                <label class="label" for="input">Referal</label>
-                <div class="topline"></div>
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <input class="input" required name="text" type="text">
                 <label class="label" for="input">Message</label>
                 <div class="topline"></div>
                 <div class="underline"></div>
             </div>
             <button class="enter">Enter</button>
 
+            <div class="input-container" style="display: flex;text-align: center;">
+                <label class="label" for="input" style="width: 100%;">Our Social Links</label>
+            </div>
+            <article id="social" style="border: 0">
+                <!-- <h4 style="margin: 0;">SOCIAL LINKS</h4> -->
+                <div class="sc-icons">
+                    <div class="cnt">
+                        <a target="_blank" class="icon icon--facebook" href="https://www.facebook.com/wissenaireiitbbs/"
+                            target="_blank">
+                            <i class="ri-facebook-line"></i>
+                        </a>
+                    </div>
+                    <div class="cnt">
+                        <a target="_blank" class="icon icon--twitter"
+                            href="https://twitter.com/i/flow/login?redirect_after_login=%2Fwissiitbbs" target="_blank">
+                            <img src="./images/Screenshot_2023-09-24_221302.png" alt="" />
+                        </a>
+                    </div>
+                    <div class="cnt">
+                        <a target="_blank" class="icon icon--instagram"
+                            href="https://www.instagram.com/wissenaire.iitbbs/" target="_blank">
+                            <i class="ri-instagram-line"></i>
+                        </a>
+                    </div>
+                    <div class="cnt">
+                        <a target="_blank" class="icon icon--linkedin"
+                            href="https://www.linkedin.com/company/wissenaire-iit-bhubaneswar/" target="_blank">
+                            <i class="ri-linkedin-line"></i>
+                        </a>
+                    </div>
+                </div>
+            </article>
         </div>
     </div>
 </body>
