--- a/index.html
+++ b/index.html
@@ -13,35 +13,22 @@
     <div class="container">
         <div class="card">
             <a class="singup">Reach Us</a>
-            <div class="input-container">
-                <input class="input" required name="text" type="text">
-                <label class="label" for="input">Enter Your Name</label>
-                <div class="topline"></div>
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <label class="label" for="input">Email</label>
-                <input class="input" required name="text" type="email">
-                <div class="topline"></div>
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <input class="input" required name="text" type="number" maxlength="10">
-                <label class="label" for="input">Phone number</label>
-                <div class="topline"></div>
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <input class="input" required name="text" type="text">
-                <label class="label" for="input">Message</label>
-                <div class="topline"></div>
-                <div class="underline"></div>
-            </div>
+            <label for="myInput" class="label">
+                <span class="label-title">NAME</span>
+                <input id="myInput" class="input" name="text" type="text" required>
+            </label><label for="myInput" class="label">
+                <span class="label-title">EMAIL</span>
+                <input id="myInput" class="input" name="text" type="text" required>
+            </label><label for="myInput" class="label">
+                <span class="label-title">PHONE NUMBER</span>
+                <input id="myInput" class="input" name="text" type="text" required>
+            </label><label for="myInput" class="label">
+                <span class="label-title">MESSAGE</span>
+                <input id="myInput" class="input" name="text" type="text" required>
+            </label>
             <button class="enter">Enter</button>
 
-            <div class="input-container" style="display: flex;text-align: center;">
-                <label class="label" for="input" style="width: 100%;">Our Social Links</label>
-            </div>
+                <div id="head" style="color: white;font-size: max(3vh,2vw);">OUR SOCIAL LINKS</div>
             <article id="social" style="border: 0">
                 <!-- <h4 style="margin: 0;">SOCIAL LINKS</h4> -->
                 <div class="sc-icons">
