--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <a class="singup">Reach Us</a>
+            <a class="singup" id="head">Reach Us</a>
             <label for="myInput" class="label">
                 <span class="label-title">NAME</span>
                 <input id="myInput" class="input" name="text" type="text" required>
@@ -26,9 +26,9 @@
                 <span class="label-title">MESSAGE</span>
                 <input id="myInput" class="input" name="text" type="text" required>
             </label>
-            <button class="enter">Enter</button>
+            <button class="enter" style="font-family: lemon milk;">Enter</button>
 
-                <div id="head" style="color: white;font-size: max(3vh,2vw);">OUR SOCIAL LINKS</div>
+                <div id="head" style="color: white;font-size: max(3vh,2vw);" id="head">OUR SOCIAL LINKS</div>
             <article id="social" style="border: 0">
                 <!-- <h4 style="margin: 0;">SOCIAL LINKS</h4> -->
                 <div class="sc-icons">
