changes in form

--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
     <div class="container">
         <div class="card">
             <a class="singup" id="head">Reach Us</a>
-            <label for="myInput" class="label">
-                <span class="label-title">NAME</span>
-                <input id="myInput" class="input" name="text" type="text" required>
-            </label><label for="myInput" class="label">
-                <span class="label-title">EMAIL</span>
-                <input id="myInput" class="input" name="text" type="text" required>
-            </label><label for="myInput" class="label">
-                <span class="label-title">PHONE NUMBER</span>
-                <input id="myInput" class="input" name="text" type="text" required>
-            </label><label for="myInput" class="label">
-                <span class="label-title">MESSAGE</span>
-                <input id="myInput" class="input" name="text" type="text" required>
-            </label>
+            <form>
+                <div class="user-box">
+                    <input type="text" name="" required="">
+                    <label>Name</label>
+                </div>
+                <div class="user-box">
+                    <input type="text" name="" required="">
+                    <label>Email</label>
+                </div>
+                <div class="user-box">
+                    <input type="text" name="" required="">
+                    <label>Mobile number</label>
+                </div>
+                <div class="user-box">
+                    <input type="text" name="" required="">
+                    <label>Message</label>
+                </div>
+            </form>
             <button class="enter" style="font-family: lemon milk;">Enter</button>
 
-                <div id="head" style="color: white;font-size: max(3vh,2vw);" id="head">OUR SOCIAL LINKS</div>
+            <div id="head" style="color: white;font-size: max(2vh,2vw);" id="head">OUR SOCIAL LINKS</div>
             <article id="social" style="border: 0">
                 <!-- <h4 style="margin: 0;">SOCIAL LINKS</h4> -->
                 <div class="sc-icons">
